src/components/search-field/search.css
h1 {
	margin-top: 90px;
}

ul {
	padding: 0;
	max-width: 600px;
}

li {
	list-style-type: none;
	width: 320px;
}

img {
	float: left;
}

button.add-button {
	margin: 0;
}

button.logout-button, button.view-collection-button {
	float: right;
	margin-right: 0px;
	width: 175px;
}

button.view-collection-button, button.search-button {
	height: 45px;
	padding: 10px;
	background: rgb(19, 96, 102);
	color: white;
	font-size: 18px;
	margin: 20px 0;
	border-radius: 3px;
}

button:hover {
  background: black;
  color: rgb(255, 234, 42);
  cursor: pointer;
  }


input[type="search"] {
  width: 320px;
	height: 30px;
	margin: 0 auto;
}

.search-form {
	margin: 0 10%;
	text-align: center;
	background: white;
	/* padding: 20px 40px; */
}

.album-search-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
}

.search-list-item button {
	width: 20%;
	float: right;
}

.search-list-item {
	display: inline-block;
	margin: 20px;
}

.title, .genre, .year {
	line-height: 175%;
}
.title {
	font-weight: 600;
	font-size:105%;
}

.search-item-text {
	display: block;
	width: 40%;
	margin-left: 175px;
	padding-top: 5px;
}

.album-search-results {
	padding: 0;
	border: solid rgb(123, 123, 123) 1px;
	margin: 25px;
	text-align: start;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-ms-border-radius: 3px;
	-o-border-radius: 3px;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
	.album-search-list {
		display: grid;
		grid-template-columns: 100%;
		grid-gap: 20px;
	}

} 

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.album-search-list {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-gap: 20px;
	}

} 

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 1200px) {
	.album-search-list {
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-gap: 20px;
	}

} 

